add addWish controller
